# Master-thesis

./: .gitignore  CLAUDE.md  UKB_preprocessing_niels.py  activate_py312.sh  activate_py39.sh  backup_to_oak.sh  bologna_preprocess_cwa.py  code  main.py  nhanes_preprocess.py  notebooks  preprocess_takeda.py  pyproject.toml  quicklook_plots_v2.py  run_montpellier_1to38.sbatch  run_preprocess_takeda_all.sbatch  run_ukb_5000.sbatch  sbatch_montpellier_array.sh  ukb_preprocess_cwa_gz.py
docs/: README.txt
manifests/: nhanes_2011_2012_pax80h_tarlist.txt  nhanes_pax80h_2013_2014_tarlist.txt
sbatch/: montpellier_34to38_array.sbatch  nhanes_2011_2012_pax80h_strided_array.sbatch  nhanes_pax80h_array.sbatch  nhanes_pax80h_strided_array.sbatch  run_ukb_all_array.sbatch
